Changes on UI, animation added, overflow solved

--- a/source/index.css
+++ b/source/index.css
@@ -1,9 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=Dosis:300,400);
+
 * {
     margin: 0;
     padding: 0;
     border: 0;
     outline: 0;
-    font-size: 100%;
     vertical-align: baseline;
     background: transparent;
     text-align: center;
@@ -12,11 +13,17 @@
 }
 
 header {
-    height: 100px;
-    background-color: white;
+    justify-content: center;
+    display: flex;
+    position: relative;
+    height: 20%;
+    width: 100%;
+    background-color: rgb(111, 78, 55);
     display: flex;
     justify-content: center;
     align-items: center;
+    border-bottom: 3px double rgb(111, 78, 55);
+    border-top: 2px solid gold;
 }
 
 main {
@@ -126,7 +133,7 @@ fieldset {
     grid-column-end: 7;
     z-index: 2;
     margin: auto;
-    transform: scale(0.9);
+    transform: scale(0.8);
 }
 
 /* Gets rid of default styling for text boxes, How much negative space to the left of input inside textbox */
@@ -290,22 +297,43 @@ input {
     text-align: center;
     align-items: center;
     table-layout: fixed;
-    padding: 0.5rem;
+    padding: 0rem;
+    margin: 0rem;
+    border: 0rem;
 }
 
 #functionality #filter,
-#changeColor,
 #select_file {
-    background-color: black;
+
+    /*background-color: rgb(111, 78, 55);*/
+    position: relative;
+    background: rgb(111, 78, 55);
     color: white;
-    border-radius: 5px;
+    border-radius: 0px;
     -webkit-text-stroke: 0.8px gold;
-    width: 6rem;
+    width: 8rem;
     height: 95%;
     text-align: center;
     align-items: center;
     padding: 16px;
     font-size: 0.8rem;
+}
+
+#changeColor {
+    position: relative;
+    /*background-color: rgb(111, 78, 55);*/
+    background: rgb(111, 78, 55);
+    color: white;
+    border-radius: 0px;
+    -webkit-text-stroke: 0.8px gold;
+    width: 8rem;
+    height: 95%;
+    text-align: center;
+    align-items: center;
+    padding: 16px;
+    font-size: 0.8rem;
+    /*box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 20%);*/
+    border: 0;
 }
 
 #functionality h1 {
@@ -314,21 +342,50 @@ input {
     font-weight: 100;
 }
 
+#functionality h1:hover {
+    font-size: 2.2em;
+    color: white;
+    letter-spacing: 0.3em;
+    -webkit-text-stroke: 0.5px gold;
+    cursor: pointer;
+    opacity: 0.8;
+    transition: all 0.2s ease-in;
+    -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
+  -webkit-mask-size: 200%;
+  animation: shine 2s infinite;
+}
+
+@-webkit-keyframes shine {
+    from {
+      -webkit-mask-position: 150%;
+    }
+    
+    to {
+      -webkit-mask-position: -50%;
+    }
+
+    100% { 
+        -webkit-transform: rotate(360deg); 
+        transform:rotate(360deg); 
+    } 
+  }
+  
+
 /* Dropdown Button */
 .dropbtn {
+    position: relative;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    width: 6rem;
+    width: 8rem;
     text-align: center;
-    background-color: black;
+    background-color: rgb(111, 78, 55);
     color: white;
     padding: 16px;
     font-size: 0.8rem;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
+
+    /*border-radius: 5px;*/
     -webkit-text-stroke: 0.8px gold;
 }
 
@@ -346,9 +403,9 @@ input {
     display: none;
     position: absolute;
     align-items: center;
+    text-align: center;
     justify-content: center;
     background-color: #f1f1f1;
-    min-width: 160px;
     z-index: 1;
 }
 
@@ -365,16 +422,34 @@ input {
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
     background-color: silver;
+    border: 1px solid black;
+    transform: scale(1.1);
+    transition: all 0.2s ease-in;
 }
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
+    font-size: 0.8rem;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: rgb(111 78 55);
+    letter-spacing: 0.5em;
+    font-size: 1rem;
+    animation: popout 2s ease;
+    -webkit-animation: popout 2s ease;
+}
+
+@keyframes popout {
+    from{transform:scale(0)}
+    80%{transform:scale(1.2)}
+    to{transform:scale(1)}
+}
+@-webkit-keyframes popout {
+    from{-webkit-transform:scale(0)}
+    80%{-webkit-transform:scale(1.2)}
+    to{-webkit-transform:scale(1)}
 }
 
 /* The list that stores all the cards
@@ -405,3 +480,12 @@ input {
     * Cream: #E3E2C5
     * 
 */
+
+/* select all hover */
+
+
+ 
+
+
+
+
